[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rate-limiter-token-bucket"
version = "0.1.0"
description = "Thread-safe token bucket rate limiter library"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "You"}]
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]
fastapi = ["fastapi>=0.111.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
